--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.105
+
+Fix for perl 5.010.1 - the code to check the version and act correctly
+on regexp refs treated .1 as behaving like 5.011.
+
 0.104
 
 Document behaviour of cmp_bag when a non ARRAY-ref argument is passed
