Import of FDALY/Test-Deep-0.106 from CPAN.
gitpan-cpan-distribution: Test-Deep
gitpan-cpan-version:      0.106
gitpan-cpan-path:         FDALY/Test-Deep-0.106.tar.gz
gitpan-cpan-author:       FDALY
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
-0.105
+0.106
+
+Release after dev.
+
+0.105-dev
 
 Fix for perl 5.010.1 - the code to check the version and act correctly
 on regexp refs treated .1 as behaving like 5.011.
