--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 
-0.170     2009-09-28
+0.108     2009-1015
+
+          simple (stringwise) comparison should now be much faster (thanks,
+          NCLEATON)
+
+0.107     2009-09-28
 
           New maintainer:  Ricardo Signes (rjbs)
 
