--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,20 @@
+Revision history for Test-Deep
 
-0.108     2009-1015
+0.109     2012-02-16
+
+          UNIVERSAL::isa and UNIVERAL::can are no longer called as functions:
+          this was deprecated in UNIVERSAL 1.03. (RT#74760, Karen Etheridge)
+
+          the code that builds the exporter configuration is cleaned up; more
+          documentation of how it may change (for the better, without breaking
+          stuff) should appear in the near future
+
+0.108     2010-10-15
 
           simple (stringwise) comparison should now be much faster (thanks,
           NCLEATON)
 
-0.107     2009-09-28
+0.107     2009-10-28
 
           New maintainer:  Ricardo Signes (rjbs)
 
