--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Revision history for Test-Deep
 
+0.110     2012-06-16
+
+          Allow methods() and listmethods() to work again on class methods
+          (RT#77804) (thanks, Ricardo Signes!)
+
 0.109     2012-02-16
 
           UNIVERSAL::isa and UNIVERAL::can are no longer called as functions:
