--- a/Changes
+++ b/Changes
@@ -1,5 +1,22 @@
 Revision history for Test-Deep
 
+0.111     2013-11-30
+
+        - When printing diagnostics, differentiate the type of a blessed object
+          from the name of the class itself (RT#78288, caused by changes to how
+          blessed objects are treated in 0.109) (thanks, Karen Etheridge)
+
+        - Typo fixes (thanks, David Steinbrunner)
+
+        - Fixes to clarity and accuracy of documentation (thanks, Michael Hamlin)
+
+        - Add metadata links to repo and issue tracker
+
+        - Added obj_isa for testing ->isa without falling back to ref($x)
+
+        - Added the *experimental* ":v1" export group to skip importing
+          Isa, isa, and blessed
+
 0.110     2012-06-16
 
           Allow methods() and listmethods() to work again on class methods
